swagger docs bearer auth
