# app/Http/Controllers/Controller.php
@@ -10,8 +10,12 @@ use Illuminate\Routing\Controller as BaseController;
 
 /**
  * @OA\Server(url=L5_SWAGGER_CONST_HOST),
- * @OA\Info(title="Ensinio Junior Test", version="0.0.1")
- *
+ * @OA\Info(title="Ensinio Junior Test", version="0.0.1"),
+ * @OA\SecurityScheme(
+ *      type="http",
+ *      scheme="bearer",
+ *      securityScheme="bearerAuth",
+ * )
  */
 class Controller extends BaseController
 {
