# storage/api-docs/api-docs.json
@@ -362,6 +362,14 @@
             }
         }
     },
+    "components": {
+        "securitySchemes": {
+            "bearerAuth": {
+                "type": "http",
+                "scheme": "bearer"
+            }
+        }
+    },
     "security": [
         []
     ]
